[gd_scene load_steps=9 format=2]

[ext_resource path="res://Milky Coffee.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/Pause.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=8]
size = 166
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=11]

[sub_resource type="DynamicFont" id=12]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 80
font_data = ExtResource( 1 )

[node name="Pause" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.658824, 0.607843, 0.886275, 0.733333 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1919.0
margin_bottom = 1065.0
rect_rotation = 0.30243

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 666.0
margin_top = 205.0
margin_right = 1252.0
margin_bottom = 860.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 586.0
margin_bottom = 178.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 81.0
margin_right = 505.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 8 )
text = "Pause"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 586.0
margin_bottom = 337.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 23.0
margin_right = 563.0
margin_bottom = 155.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 540.0
margin_bottom = 92.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_left = 104.0
margin_right = 436.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
visible = false
margin_right = 44.0
margin_bottom = 100.0
rect_min_size = Vector2( 44, 0 )
custom_fonts/font = SubResource( 9 )
text = ">"

[node name="StartPauseButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 332.0
margin_bottom = 92.0
rect_min_size = Vector2( 332, 0 )
custom_fonts/font = SubResource( 13 )
text = "Play"

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 96.0
margin_right = 540.0
margin_bottom = 155.0
theme = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = "Click \"Play\" or \"P\" to keep going! 
You can hit \"P\" to pause or unpause at any time."
align = 1

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 341.0
margin_right = 586.0
margin_bottom = 496.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer4"]
margin_right = 586.0
margin_bottom = 155.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer"]
margin_right = 586.0
margin_bottom = 92.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/CenterContainer"]
margin_left = 127.0
margin_right = 459.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/CenterContainer/HBoxContainer"]
visible = false
margin_right = 44.0
margin_bottom = 100.0
rect_min_size = Vector2( 44, 0 )
custom_fonts/font = SubResource( 9 )
text = ">"

[node name="MenuButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 332.0
margin_bottom = 92.0
rect_min_size = Vector2( 332, 0 )
custom_fonts/font = SubResource( 10 )
text = "Menu"

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer"]
margin_top = 96.0
margin_right = 586.0
margin_bottom = 155.0
theme = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = "Click \"Menu\" or \"Esc\" to go back to the Main Menu! 
You can hit \"Esc\" to escape to the menu at any time."
align = 1

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 500.0
margin_right = 586.0
margin_bottom = 655.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer3"]
margin_left = 88.0
margin_right = 497.0
margin_bottom = 155.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer"]
margin_right = 409.0
margin_bottom = 92.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer"]
margin_left = 38.0
margin_right = 370.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer/HBoxContainer"]
visible = false
margin_right = 44.0
margin_bottom = 100.0
rect_min_size = Vector2( 44, 0 )
custom_fonts/font = SubResource( 9 )
text = ">"

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 332.0
margin_bottom = 92.0
rect_min_size = Vector2( 332, 0 )
custom_fonts/font = SubResource( 10 )
text = "Restart"

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer"]
margin_top = 96.0
margin_right = 409.0
margin_bottom = 155.0
theme = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = "Click \"Restart\" to restart the game! 
You can also restart from the menu."
align = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer/StartPauseButton" to="." method="_on_StartPauseButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/CenterContainer/HBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
